--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -29,6 +29,12 @@
     -->
 
     <!--STYLES-->
+    <link rel="stylesheet" href="/styles/bootstrap.css">
+    <link rel="stylesheet" href="/styles/bootstrap.min.css">
+    <link rel="stylesheet" href="/styles/importer.css">
+    <link rel="stylesheet" href="/styles/mdb.css">
+    <link rel="stylesheet" href="/styles/mdb.min.css">
+    <link rel="stylesheet" href="/styles/style.css">
     <!--STYLES END-->
   </head>
 
@@ -59,6 +65,7 @@
     -->
 
     <!--TEMPLATES-->
+    
     <!--TEMPLATES END-->
 
 
@@ -86,6 +93,13 @@
     -->
 
     <!--SCRIPTS-->
+    <script src="/js/dependencies/sails.io.js"></script>
+    <script src="/js/bootstrap.js"></script>
+    <script src="/js/bootstrap.min.js"></script>
+    <script src="/js/jquery-3.2.1.min.js"></script>
+    <script src="/js/mdb.js"></script>
+    <script src="/js/mdb.min.js"></script>
+    <script src="/js/popper.min.js"></script>
     <!--SCRIPTS END-->
   </body>
 </html>
