--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1,6 +1,6 @@
 /* Your custom styles */
 
-.view {
+#home-image {
     background: url("https://mdbootstrap.com/img/Photos/Others/img (50).jpg")no-repeat center center !important;
     background-size: cover;
     height: 500px;
@@ -13,6 +13,41 @@
 
 }
 
+.gradient-telegram{
+    background: #1c92d2;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #f2fcfe, #1c92d2);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #f2fcfe, #1c92d2); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+}
+
+.gradient-scooter {
+    background: #36D1DC;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #5B86E5, #36D1DC);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #5B86E5, #36D1DC); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+}
+
+.card-gradient-top {
+    height: 200px;
+    width: auto;
+}
+
 .nav-link{
     color: white;
+}
+
+.card {
+    padding: 0px !important;
+}
+
+.centered {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    /* bring your own prefixes */
+    transform: translate(-50%, -50%);
+}
+
+#form-login {
+    width: 100%;
 }
