change layout login en nav

--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -19,7 +19,7 @@
             <div class="card-body">
 
                 <!--Text-->
-                <form>
+                <form action="user/post" method="post">
 
                     <div class="md-form">
                         <i class="far fa-envelope prefix grey-text"></i>
