--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -35,12 +35,47 @@
     <link rel="stylesheet" href="/styles/mdb.css">
     <link rel="stylesheet" href="/styles/mdb.min.css">
     <link rel="stylesheet" href="/styles/style.css">
+    <link rel="stylesheet" href="/linker/css/fa-brands.css">
+    <link rel="stylesheet" href="/linker/css/fa-brands.min.css">
+    <link rel="stylesheet" href="/linker/css/fa-regular.css">
+    <link rel="stylesheet" href="/linker/css/fa-regular.min.css">
+    <link rel="stylesheet" href="/linker/css/fa-solid.css">
+    <link rel="stylesheet" href="/linker/css/fa-solid.min.css">
+    <link rel="stylesheet" href="/linker/css/fontawesome-all.css">
+    <link rel="stylesheet" href="/linker/css/fontawesome-all.min.css">
+    <link rel="stylesheet" href="/linker/css/fontawesome.css">
+    <link rel="stylesheet" href="/linker/css/fontawesome.min.css">
     <!--STYLES END-->
   </head>
 
   <body>
     <%- body %>
 
+    <!--Main Navigation-->
+
+
+    <nav class="navbar fixed-top navbar-expand-lg primary-color-dark text-uppercase">
+      <a class="navbar-brand" href="/home">Wallet</a>
+      <button class="navbar-toggler white" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+              aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Link</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/login">Login</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+
+    <!--Main Navigation-->
 
 
     <!--
