send data with response

--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -38,6 +38,8 @@
                     </div>
                 </form>
 
+                <a href="/signup"><p>Sign up</p></a>
+
             </div>
 
         </div>
