--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -132,6 +132,7 @@
     <script src="/js/bootstrap.js"></script>
     <script src="/js/bootstrap.min.js"></script>
     <script src="/js/jquery-3.2.1.min.js"></script>
+    <script src="/js/main.js"></script>
     <script src="/js/mdb.js"></script>
     <script src="/js/mdb.min.js"></script>
     <script src="/js/popper.min.js"></script>
