--- a/views/user/signup.ejs
+++ b/views/user/signup.ejs
@@ -9,7 +9,7 @@
 
 
         <!--Card-->
-        <div class="card col-lg-4 col-6 col-sm-8">
+        <div class="card col-lg-5 col-5 col-sm-8">
 
             <!--Card image-->
             <div class="view gradient-scooter card-gradient-top">
@@ -31,7 +31,7 @@
                 <% } %>
 
                 <!--Text-->
-                <form method="post">
+                <form action="/user/create" method="post" id="form-signup">
 
                     <div class="md-form">
                         <i class="far fa-user prefix grey-text"></i>
