config for routes

--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -25,7 +25,7 @@
                 <% } %>
 
                 <!--Text-->
-                <form action="/user/loginPost" method="post">
+                <form action="/user/login" method="post">
 
                     <div class="md-form">
                         <i class="far fa-envelope prefix grey-text"></i>
