--- a/views/user/signup.ejs
+++ b/views/user/signup.ejs
@@ -31,7 +31,7 @@
                 <% } %>
 
                 <!--Text-->
-                <form action="/user/create" method="post" id="form-signup">
+                <form action="/user/signup" method="post" id="form-signup">
 
                     <div class="md-form">
                         <i class="far fa-user prefix grey-text"></i>
