add to wallet and like charity

--- a/views/charity/show.ejs
+++ b/views/charity/show.ejs
@@ -5,16 +5,16 @@
     <div class="row col-12 justify-content-center">
 
         <% if (typeof records !== 'undefined') { %>
-        <% _.each(records, function (record) { %>
+        <% _.each(records, function (record) { var likesCount = record.likes.length %>
         <div class="card card-body col-lg-5 col-sm-12 charity-records">
             <h4 class="card-title"><%= record.name %></h4>
             <p class="card-text"><%= record.description %></p>
             <div class="flex-row">
-                <a class="card-link">Toevoegen</a>
-                <a class="card-link">Like</a>
+                <a class="card-link" href="/charity/add/<%= record.id_charity %>">Toevoegen</a>
+                <a class="card-link" href="/charity/like/<%= record.id_charity %>">Like</a>
                 <span
                         class="badge badge-primary badge-pill mx-2 align-middle badge-nonProfit"><i
-                            class="fas fa-heart"> </i> 15 </span>
+                            class="fas fa-heart"> </i> <%= likesCount %>  </span>
             </div>
         </div>
         <% }) %>
@@ -23,5 +23,3 @@
 
 
 </div>
-
-
