--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -46,6 +46,8 @@
                         <label for="defaultForm-pass">Your password</label>
                     </div>
 
+                    <input type='hidden' name='_csrf' value='<%= _csrf %>'>
+
                     <div class="text-center">
                         <button class="btn btn-primary">Login</button>
                     </div>
@@ -57,7 +59,6 @@
 
         </div>
         <!--/.Card-->
-
 
     </div>
 
