--- a/views/user/signup.ejs
+++ b/views/user/signup.ejs
@@ -51,6 +51,8 @@
                         <label for="defaultForm-pass">Your password</label>
                     </div>
 
+                    <input type='hidden' name='_csrf' value='<%= _csrf %>'>
+
                     <div class="text-center">
                         <button class="btn btn-primary" type="submit">Sign up</button>
                     </div>
