navigation admin, user profile page

--- a/views/navigation.ejs
+++ b/views/navigation.ejs
@@ -1,5 +1,26 @@
 <!--Main Navigation-->
 
+<% if(req.session.authenticated && req.session.User.role === "admin") { %>
+<nav class="navbar fixed-top navbar-expand-lg navbar-dark red">
+    <a class="navbar-brand" href="/homepage"><strong>Wallet</strong></a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+                <a class="nav-link" href="/admin/dashboard">Dashboard <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/admin/category">Categories</a>
+            </li>
+        </ul>
+    </div>
+</nav>
+
+<% } else{ %>
+
 <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-indigo">
     <a class="navbar-brand" href="/homepage"><strong>Wallet</strong></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -12,12 +33,12 @@
                 <a class="nav-link" href="/homepage">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Profile</a>
+                <a class="nav-link" href="/charity/show">Charities</a>
             </li>
             <% if (req.session.authenticated) { %>
+            <li class="nav-item">
+                <a class="nav-link" href="/user/profile">Profile</a>
+            </li>
             <li class="nav-item"><a href="/user/logout" class="nav-link">Logout</a></li>
             <% } else { %>
             <li class="nav-item"><a href="/user/login" class="nav-link">Login</a></li>
@@ -25,3 +46,5 @@
         </ul>
     </div>
 </nav>
+<% } %>
+
