--- a/views/user/show.ejs
+++ b/views/user/show.ejs
@@ -13,13 +13,13 @@
             </thead>
             <tbody>
             <% if (typeof records !== 'undefined') { %>
+            <% _.each(records, function (record) { %>
             <tr>
-                <% _.each(records, function (record) { %>
-                <th scope="row">1</th>
                 <td><%= record.name %></td>
                 <td><%= record.email %></td>
                 <td><%= record.role %></td>
-                <td><a href="/user/edit/<%= record.id_user %>">edit</a><a href="/user/delete/<%= record.id_user %>">delete</a></td>
+                <td><a href="/user/edit/<%= record.id_user %>"><i class="fas fa-edit fa-lg"></i></a><a
+                            href="/user/delete/<%= record.id_user %>"><i class="fas fa-times fa-lg"></i></a></td>
                 <% }) %>
             </tr>
             <% } %>
