destroy user with association

--- a/views/wallet/wallet.ejs
+++ b/views/wallet/wallet.ejs
@@ -17,7 +17,7 @@
 
             <td><%= charity.name %></td>
             <td><%= charity.description %></td>
-            <td><a href="/wallet/delete/<%= charity.id_charity %>"><i
+            <td><a href="/wallet/destroy/<%= charity.id_charity %>"><i
                             class="fa fa-window-close fa-lg danger-color-dark"></i></a></td>
 
         </tr>
