--- a/views/user/show.ejs
+++ b/views/user/show.ejs
@@ -19,7 +19,7 @@
                 <td><%= record.email %></td>
                 <td><%= record.role %></td>
                 <td><a href="/user/edit/<%= record.id_user %>"><i class="fas fa-edit fa-lg"></i></a><a
-                            href="/user/delete/<%= record.id_user %>"><i class="fas fa-times fa-lg"></i></a></td>
+                            href="/user/destroy/<%= record.id_user %>"><i class="fas fa-times fa-lg"></i></a></td>
                 <% }) %>
             </tr>
             <% } %>
