--- a/views/charity/show.ejs
+++ b/views/charity/show.ejs
@@ -2,6 +2,9 @@
     <!-- Content here -->
     <%- partial('search.ejs') %>
 
+
+
+
     <div class="row col-12 justify-content-center">
 
         <% if (typeof records !== 'undefined') { %>
@@ -10,7 +13,8 @@
             <h4 class="card-title"><%= record.name %></h4>
             <p class="card-text"><%= record.description %></p>
             <div class="flex-row">
-                <a class="card-link" href="/charity/add/<%= record.id_charity %>">Toevoegen</a>
+                <a class="card-link" href="/charity/detail/<%= record.id_charity %>">Detail</a>
+                <a class="card-link" href="/charity/add/<%= record.id_charity %>">Add</a>
                 <a class="card-link" href="/charity/like/<%= record.id_charity %>">Like</a>
                 <span
                         class="badge badge-primary badge-pill mx-2 align-middle badge-nonProfit"><i
@@ -20,6 +24,5 @@
         <% }) %>
         <% } %>
     </div>
-
 
 </div>
