--- a/views/charity/detail.ejs
+++ b/views/charity/detail.ejs
@@ -1,32 +1,48 @@
 <div class="container">
 
-    <div class="row col-12 justify-content-center">
+    <div class="row col-12">
 
-        <table class="table">
-            <thead>
-            <tr>
-                <th>Name</th>
-                <th>Email</th>
-                <th>Edit</th>
-            </tr>
-            </thead>
-            <tbody>
-            <% if (typeof records !== 'undefined') { %>
-            <tr>
-                <% _.each(records, function (record) { %>
-                <th scope="row">1</th>
-                <td><%= record.name %></td>
-                <td><%= record.description %></td>
-                <td><a href="/charity/edit/<%= record.id_charity %>">edit</a><a href="/charity/delete/<%= record.id_charity %>">delete</a></td>
-                <% }) %>
-            </tr>
-            <% } %>
-            </tbody>
-        </table>
+        <div class="col-4">
+            <div class="row col-12 justify-content-center">
+
+                <div class="card col-12">
+
+                    <!--Card image-->
+                    <!--Card image-->
+                    <div class="view gradient-scooter card-gradient-top">
+                        <div class="mask flex-center">
+                            <h1 class="white-text">Charity</h1>
+                        </div>
+                    </div>
+
+                    <!--Card content-->
+                    <div class="card-body">
+                        <% if (typeof records !== 'undefined') { %>
+                        <% _.each(records, function (record) { %>
+                        <% if (typeof record !== 'undefined') { %>
+                        <!--Text-->
+                        <ul class="list-group">
+                            <li class="list-group-item">Name: <%= record.name %></li>
+                            <li class="list-group-item">Description: <%= record.description %></li>
+                            <li class="list-group-item">Category: <%= category %></li>
+                        </ul>
+                        <% } %>
+                        <% }) %>
+                        <% } %>
+                    </div>
+
+                </div>
+                <!--/.Card-->
+
+            </div>
+        </div>
+
+        <div class="col-8">
+            <%- partial('../like/like.ejs') %>
+        </div>
 
     </div>
 
 </div>
 
 
-<%- partial('../like/like.ejs') %>
