--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -4,8 +4,10 @@
     <div class="full-bg-img flex-center">
         <div class="container text-center white-text">
             <div class="white-text wow fadeInUp">
-                <h1 class="font-weight-bold text-left">Beheer. Deel. Betaal. <br> Je favoriete goede doelen organisaties</h1>
-                <p class=" text-left">Op dit platform kun je een lijst van goede doelen opstellen met behulp van vrienden. Deel daarnaast
+                <h1 class="font-weight-bold text-left">Beheer. Deel. Betaal. <br> Je favoriete goede doelen organisaties
+                </h1>
+                <p class=" text-left">Op dit platform kun je een lijst van goede doelen opstellen met behulp van
+                    vrienden. Deel daarnaast
                     je eigen lijst. Tevreden met je lijst? betaal de goede gemakkelijk via ons platform</p>
             </div>
         </div>
@@ -21,15 +23,29 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
+                <div class="container">
+                    <!-- Content here -->
+                    <div class="row col-12 justify-content-center">
 
-                <p align="justify">quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-                    pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
-                    anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                    ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-                    voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                        <% if (typeof records !== 'undefined') { %>
+                        <% _.each(records, function (record) { var likesCount = record.likes.length %>
+                        <div class="card card-body col-lg-5 col-sm-12 charity-records">
+                            <h4 class="card-title"><%= record.name %></h4>
+                            <p class="card-text"><%= record.description %></p>
+                            <div class="flex-row">
+                                <a class="card-link" href="/charity/detail/<%= record.id_charity %>">Detail</a>
+                                <a class="card-link" href="/charity/add/<%= record.id_charity %>">Add</a>
+                                <a class="card-link" href="/charity/like/<%= record.id_charity %>">Like</a>
+                                <span
+                                        class="badge badge-primary badge-pill mx-2 align-middle badge-nonProfit"><i
+                                            class="fas fa-heart"> </i> <%= likesCount %>  </span>
+                            </div>
+                        </div>
+                        <% }) %>
+                        <% } %>
+                    </div>
+
+                </div>
 
             </div>
         </div>
