--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -17,7 +17,7 @@
 
             <!--Card content-->
             <div class="card-body">
-                <% if (typeof formError !== 'undefined') { %>
+                <% if (typeof formError !== 'undefined' && formError.length > 0) { %>
                 <ul class="list-group">
                     <% _.each(formError, function (error) { %>
                     <li class="list-group-item list-group-item-warning"><%= error %></li>
