--- a/views/charity/search.ejs
+++ b/views/charity/search.ejs
@@ -15,7 +15,7 @@
                         </select>
                         <% } %>
                     </div>
-
+                    <input type='hidden' name='_csrf' value='<%= _csrf %>'>
                     <input type="text" class="form-control" name="searchString" placeholder="Search term...">
                     <span class="input-group-btn">
                     <button class="btn btn-primary" type="submit"><i class="fas fa-search"></i></button>
